--- a/views/interests.html
+++ b/views/interests.html
@@ -8,7 +8,10 @@
                 <label class="font-weight-bold">In-door Interests</label><br>
 
                 <check if="{{ isset(@errors['indoor']) }}">
-                    <span class="err">{{ @errors['indoor'] }}</span>
+                    <div class="alert alert-danger alert-dismissible fade show mt-1">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        {{ @errors['indoor'] }}
+                    </div>
                 </check>
 
                 <div class="row">
@@ -33,7 +36,10 @@
                 <label class="font-weight-bold mt-4">Out-door Interests</label><br>
 
                 <check if="{{ isset(@errors['outdoor']) }}">
-                    <span class="err">{{ @errors['outdoor'] }}</span>
+                    <div class="alert alert-danger alert-dismissible fade show mt-1">
+                        <button type="button" class="close" data-dismiss="alert">&times;</button>
+                        {{ @errors['outdoor'] }}
+                    </div>
                 </check>
 
                 <div class="row">
