--- a/views/pinfo.html
+++ b/views/pinfo.html
@@ -15,31 +15,39 @@
                             <span class="input-group-text" id="basic-addon2"><i class="fas fa-address-card"></i></span>
                         </div>
                     </div>
-                    <span class="err">
-                        <check if="{{ isset(@errors['fname']) }}">
+
+                    <check if="{{ isset(@errors['fname']) }}">
+                        <div class="alert alert-danger alert-dismissible fade show mt-1">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ @errors['fname'] }}
-                        </check>
-                    </span>
+                        </div>
+                    </check>
+
                 </div>
 
                 <div class="form-group">
                     <label for="lname" class="font-weight-bold">Last Name</label>
                     <input type="text" class="form-control" id="lname" name="lname" value="{{ @lname }}">
-                    <span class="err">
-                        <check if="{{ isset(@errors['lname']) }}">
+
+                    <check if="{{ isset(@errors['lname']) }}">
+                        <div class="alert alert-danger alert-dismissible fade show mt-1">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ @errors['lname'] }}
-                        </check>
-                    </span>
+                        </div>
+                    </check>
+
                 </div>
 
                 <div class="form-group">
                     <label for="age" class="font-weight-bold">Age</label>
                     <input type="text" class="form-control" id="age" name="age" value="{{ @age }}">
-                    <span class="err">
-                        <check if="{{ isset(@errors['age']) }}">
+
+                    <check if="{{ isset(@errors['age']) }}">
+                        <div class="alert alert-danger alert-dismissible fade show mt-1">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ @errors['age'] }}
-                        </check>
-                    </span>
+                        </div>
+                    </check>
                 </div>
 
                 <div class="form-group">
@@ -59,22 +67,24 @@
 
                 <div class="form-group">
                     <label for="phone" class="font-weight-bold">Phone Number</label>
-                    <input type="text" class="form-control" id="phone" name="phone" placeholder="123-456-7890"
+                    <input type="text" class="form-control" id="phone" name="phone" placeholder="1234567890"
                            value="{{ @phone }}">
-                    <span class="err">
-                        <check if="{{ isset(@errors['phone']) }}">
+
+                    <check if="{{ isset(@errors['phone']) }}">
+                        <div class="alert alert-danger alert-dismissible fade show mt-1">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ @errors['phone'] }}
-                        </check>
-                    </span>
+                        </div>
+                    </check>
+
                 </div>
 
                 <div class="form-group">
 
                     <label for="phone" class="font-weight-bold">Premium Membership</label>
                     <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="premium" name="premium"
-                               value="{{ @premium }}"
-                        <check if="{{ @premium == @selectedPremium }}">
+                        <input class="form-check-input" type="checkbox" id="premium" name="premium" value="premium"
+                        <check if="{{ isset(@premium) }}">
                             checked="checked"
                         </check>
                         >
