--- a/views/profile.html
+++ b/views/profile.html
@@ -8,11 +8,14 @@
                 <div class="form-group">
                     <label for="email" class="font-weight-bold">Email</label>
                     <input type="text" class="form-control" id="email" name="email" value="{{ @email }}">
-                    <span class="err">
-                        <check if="{{ isset(@errors['email']) }}">
+
+                    <check if="{{ isset(@errors['email']) }}">
+                        <div class="alert alert-danger alert-dismissible fade show mt-1">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ @errors['email'] }}
-                        </check>
-                    </span>
+                        </div>
+                    </check>
+
                 </div>
 
                 <div class="form-group">
@@ -28,11 +31,14 @@
                             > {{ @state }}</option>
                         </repeat>
                     </select>
-                    <span class="err">
-                        <check if="{{ isset(@errors['state']) }}">
+
+                    <check if="{{ isset(@errors['state']) }}">
+                        <div class="alert alert-danger alert-dismissible fade show mt-1">
+                            <button type="button" class="close" data-dismiss="alert">&times;</button>
                             {{ @errors['state'] }}
-                        </check>
-                    </span>
+                        </div>
+                    </check>
+
                 </div>
 
                 <div class="form-group">
@@ -54,6 +60,18 @@
             </div>
 
             <div class="col-lg-6">
+
+                <div class="form-group">
+                    <label class="font-weight-bold">You can upload an image of yourself</label><br>
+                    <div class="card-body border">
+                        <form action="upload.php" method="post" enctype="multipart/form-data">
+                            Select image to upload:
+                            <input type="file" name="fileToUpload" id="fileToUpload">
+                            <input type="submit" value="Upload Image" name="submit">
+                        </form>
+                    </div>
+                </div>
+
                 <div class="form-group">
                     <label for="biography" class="font-weight-bold">Biography</label>
                     <textarea class="form-control" rows="5" id="biography" name="biography">{{ @biography }}</textarea>
